Bills to csv file completed.
Incl. bill_id|title|subject|summary|party

--- a/billstocsv.ipynb
+++ b/billstocsv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,45 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# make a dict were id's are keys and parties are values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['McConnell', 'Mitch', '', '', '', 'Mitch McConnell', '1942-02-20', 'M', 'sen', 'KY', '', '2', 'Republican', 'https://www.mcconnell.senate.gov', '317 Russell Senate Office Building Washington DC 20510', '202-224-2541', 'http://www.mcconnell.senate.gov/public/index.cfm?p=contact', 'http://www.mcconnell.senate.gov/public/?a=rss.feed', 'McConnellPress', 'mitchmcconnell', '', '', 'M000355', '01395', 'N00003389', 'S174', 'S2KY00012', '2351', '300072', '53298', 'Mitch McConnell', '', '14921', 'Mitch McConnell'], ['Merkley', 'Jeff', '', '', '', 'Jeff Merkley', '1956-10-24', 'M', 'sen', 'OR', '', '2', 'Democrat', 'https://www.merkley.senate.gov', '313 Hart Senate Office Building Washington DC 20510', '202-224-3753', 'http://www.merkley.senate.gov/contact/', 'http://www.merkley.senate.gov/rss/', 'SenJeffMerkley', 'jeffmerkley', 'SenatorJeffMerkley', 'UCRoXttCJhMnLVCxCaa6VnNQ', 'M001176', '01900', 'N00029303', 'S322', 'S8OR00207', '1029842', '412325', '23644', 'Jeff Merkley', '', '40908', 'Jeff Merkley']]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(your_list[22:24])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "string index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-39-08088f2b2aef>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mrow\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0myour_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0mperson\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0myour_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m         \u001b[0mthomas_id\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTidclean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mperson\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mthomas_index\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m         \u001b[0mfinal_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mperson\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mbioguide_index\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mthomas_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mperson\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mparty_index\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-37-42081c091ddc>\u001b[0m in \u001b[0;36mTidclean\u001b[0;34m(Tid)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mTidclean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTid\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0;32mwhile\u001b[0m \u001b[0mTid\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"0\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m         \u001b[0mi\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mTid\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: string index out of range"
+      "[['bioguide_id', 'thomas_id', 'party'], ['B000944', '136', 'Democrat'], ['C000127', '172', 'Democrat'], ['C000141', '174', 'Democrat'], ['C000174', '179', 'Democrat'], ['C001070', '1828', 'Democrat'], ['F000062', '1332', 'Democrat'], ['K000367', '1826', 'Democrat'], ['M000639', '791', 'Democrat'], ['S000033', '1010', 'Independent'], ['S000770', '1531', 'Democrat'], ['T000464', '1829', 'Democrat'], ['W000802', '1823', 'Democrat'], ['B001261', '1881', 'Republican'], ['W000437', '1226', 'Republican'], ['A000360', '1695', 'Republican'], ['C001035', '1541', 'Republican'], ['C001056', '1692', 'Republican'], ['D000563', '326', 'Democrat'], ['E000285', '1542', 'Republican']]\n"
      ]
     }
    ],
@@ -65,18 +34,119 @@
     "    bioguide_index = your_list[0].index(\"bioguide_id\")\n",
     "    thomas_index = your_list[0].index(\"thomas_id\")\n",
     "    party_index = your_list[0].index(\"party\")\n",
-    "    final_list = [[\"bioguide_id\", \"thomas_id\", \"party\"]]\n",
-    "    for row in range(1,len(your_list)):\n",
+    "    legis_current = []\n",
+    "    for row in range(len(your_list)):\n",
     "        person = your_list[row]\n",
-    "        thomas_id = Tidclean(person[thomas_index])\n",
-    "        final_list.append([person[bioguide_index], thomas_id, person[party_index]])\n",
+    "        if len(person[thomas_index]) == 5:\n",
+    "            thomas_id = Tidclean(person[thomas_index])\n",
+    "            legis_current.append([person[bioguide_index], thomas_id, person[party_index]])\n",
+    "        else:\n",
+    "            legis_current.append([person[bioguide_index], person[thomas_index], person[party_index]])\n",
     "        \n",
-    "print(final_list[:20])"
+    "print(legis_current[:20])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['bioguide_id', 'thomas_id', 'party'], ['B000226', '', 'Anti-Administration'], ['B000546', '', ''], ['B001086', '', ''], ['C000187', '', ''], ['C000538', '', ''], ['C000710', '', ''], ['D000013', '', 'Pro-Administration'], ['E000155', '', 'Pro-Administration'], ['F000100', '', 'Anti-Administration'], ['F000224', '', ''], ['G000012', '', ''], ['G000403', '', 'Anti-Administration'], ['G000500', '', ''], ['H000368', '', 'Pro-Administration'], ['H000995', '', ''], ['I000053', '', 'Pro-Administration'], ['J000182', '', 'Pro-Administration'], ['J000198', '', 'Pro-Administration'], ['L000201', '', 'Anti-Administration']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "with open('data/legislators/legislators-historical.csv', 'r') as f:\n",
+    "    reader = csv.reader(f)\n",
+    "    your_list = list(reader)\n",
+    "    bioguide_index = your_list[0].index(\"bioguide_id\")\n",
+    "    thomas_index = your_list[0].index(\"thomas_id\")\n",
+    "    party_index = your_list[0].index(\"party\")\n",
+    "    legis_historical = []\n",
+    "    for row in range(len(your_list)):\n",
+    "        person = your_list[row]\n",
+    "        if len(person[thomas_index]) == 5:\n",
+    "            thomas_id = Tidclean(person[thomas_index])\n",
+    "            legis_historical.append([person[bioguide_index], thomas_id, person[party_index]])\n",
+    "        else:\n",
+    "            legis_historical.append([person[bioguide_index], person[thomas_index], person[party_index]])\n",
+    "        \n",
+    "print(legis_historical[:20])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "party: The political party of the legislator. If the legislator changed parties, this is the most recent party held during the term and party_affiliations will be set. Values are typically \"Democrat\", \"Independent\", or \"Republican\". The value typically matches the political party of the legislator on the ballot in his or her last election, although for state affiliate parties such as \"Democratic Farmer Labor\" we will use the national party name (\"Democrat\") instead to keep the values of this field normalized."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['bioguide_id', 'thomas_id', 'party'],\n",
+       " ['B000944', '136', 'Democrat'],\n",
+       " ['C000127', '172', 'Democrat'],\n",
+       " ['C000141', '174', 'Democrat'],\n",
+       " ['C000174', '179', 'Democrat']]"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "legislators_ID = []\n",
+    "legislators_ID.extend(legis_current)\n",
+    "legislators_ID.extend(legis_historical[1:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "with open('data/legislators/legislators_ID.csv', 'w') as outcsv:   \n",
+    "    writer = csv.writer(outcsv, delimiter=',', quotechar='|', quoting=csv.QUOTE_MINIMAL, lineterminator='\\n')\n",
+    "    for item in legislators_ID:\n",
+    "        writer.writerow([item[0], item[1], item[2]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('data/legislators/legislators_ID.csv', mode='r') as infile:\n",
+    "    reader = csv.reader(infile)\n",
+    "    dict_bioguide = {}\n",
+    "    dict_thomas = {}\n",
+    "    for person in reader:\n",
+    "        dict_bioguide[person[0]] = person[2]\n",
+    "        dict_thomas[person[1]] = person[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,11 +182,12 @@
     "                summary_ = bill[\"summary\"]\n",
     "                dictionary[\"summary\"] = summary_[\"text\"]\n",
     "                sponsor = bill[\"sponsor\"]\n",
+    "                # find party in csv file from ID\n",
     "                if \"thomas_id\" in sponsor.keys():\n",
     "                    thomas_id = sponsor[\"thomas_id\"]\n",
-    "                    party = TidtoParty(thomas_id)\n",
+    "                    party = dict_thomas[Tidclean(thomas_id)]\n",
     "                if \"bioguide_id\" in sponsor.keys():\n",
-    "                    \n",
+    "                    party = dict_bioguide[sponsor[\"bioguide_id\"]]\n",
     "                dictionary[\"party\"] = party\n",
     "    \n",
     "    # Appended to the list of bills \n",
@@ -129,25 +200,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
     "\n",
-    "with open('112.csv', 'w') as csvfile:\n",
+    "with open('data/112_filtered.csv', 'w') as csvfile:\n",
     "    filewriter = csv.writer(csvfile, delimiter='|')\n",
-    "    filewriter.writerow(['bill_id', 'title', 'subject','summary'])\n",
+    "    filewriter.writerow(['bill_id', 'title', 'subject','summary', 'party'])\n",
     "    for bill in lo_bills:\n",
-    "        filewriter.writerow([bill['bill_id'], bill['title'], bill['subject'], bill['summary']])"
+    "        filewriter.writerow([bill['bill_id'], bill['title'], bill['subject'], bill['summary'], bill['party']])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
