Cleaned up the billstocsv file

--- a/billstocsv.ipynb
+++ b/billstocsv.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since the thomas_id in the legislators data is filtered from the preceeding zero's we have to do the same."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,18 +21,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 28,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[['bioguide_id', 'thomas_id', 'party'], ['B000944', '136', 'Democrat'], ['C000127', '172', 'Democrat'], ['C000141', '174', 'Democrat'], ['C000174', '179', 'Democrat'], ['C001070', '1828', 'Democrat'], ['F000062', '1332', 'Democrat'], ['K000367', '1826', 'Democrat'], ['M000639', '791', 'Democrat'], ['S000033', '1010', 'Independent'], ['S000770', '1531', 'Democrat'], ['T000464', '1829', 'Democrat'], ['W000802', '1823', 'Democrat'], ['B001261', '1881', 'Republican'], ['W000437', '1226', 'Republican'], ['A000360', '1695', 'Republican'], ['C001035', '1541', 'Republican'], ['C001056', '1692', 'Republican'], ['D000563', '326', 'Democrat'], ['E000285', '1542', 'Republican']]\n"
-     ]
-    }
-   ],
+   "source": [
+    "First we will create another csv file which will make it easier to look up the correlated party with the thomas or bioguide id. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import csv\n",
     "with open('data/legislators/legislators-current.csv', 'r') as f:\n",
@@ -41,26 +47,16 @@
     "            thomas_id = Tidclean(person[thomas_index])\n",
     "            legis_current.append([person[bioguide_index], thomas_id, person[party_index]])\n",
     "        else:\n",
-    "            legis_current.append([person[bioguide_index], person[thomas_index], person[party_index]])\n",
-    "        \n",
-    "print(legis_current[:20])"
+    "            legis_current.append([person[bioguide_index], person[thomas_index], person[party_index]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[['bioguide_id', 'thomas_id', 'party'], ['B000226', '', 'Anti-Administration'], ['B000546', '', ''], ['B001086', '', ''], ['C000187', '', ''], ['C000538', '', ''], ['C000710', '', ''], ['D000013', '', 'Pro-Administration'], ['E000155', '', 'Pro-Administration'], ['F000100', '', 'Anti-Administration'], ['F000224', '', ''], ['G000012', '', ''], ['G000403', '', 'Anti-Administration'], ['G000500', '', ''], ['H000368', '', 'Pro-Administration'], ['H000995', '', ''], ['I000053', '', 'Pro-Administration'], ['J000182', '', 'Pro-Administration'], ['J000198', '', 'Pro-Administration'], ['L000201', '', 'Anti-Administration']]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import csv\n",
     "with open('data/legislators/legislators-historical.csv', 'r') as f:\n",
@@ -70,55 +66,31 @@
     "    thomas_index = your_list[0].index(\"thomas_id\")\n",
     "    party_index = your_list[0].index(\"party\")\n",
     "    legis_historical = []\n",
-    "    for row in range(len(your_list)):\n",
+    "    for row in range(1,len(your_list)):\n",
     "        person = your_list[row]\n",
     "        if len(person[thomas_index]) == 5:\n",
     "            thomas_id = Tidclean(person[thomas_index])\n",
     "            legis_historical.append([person[bioguide_index], thomas_id, person[party_index]])\n",
     "        else:\n",
-    "            legis_historical.append([person[bioguide_index], person[thomas_index], person[party_index]])\n",
-    "        \n",
-    "print(legis_historical[:20])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "party: The political party of the legislator. If the legislator changed parties, this is the most recent party held during the term and party_affiliations will be set. Values are typically \"Democrat\", \"Independent\", or \"Republican\". The value typically matches the political party of the legislator on the ballot in his or her last election, although for state affiliate parties such as \"Democratic Farmer Labor\" we will use the national party name (\"Democrat\") instead to keep the values of this field normalized."
+    "            legis_historical.append([person[bioguide_index], person[thomas_index], person[party_index]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['bioguide_id', 'thomas_id', 'party'],\n",
-       " ['B000944', '136', 'Democrat'],\n",
-       " ['C000127', '172', 'Democrat'],\n",
-       " ['C000141', '174', 'Democrat'],\n",
-       " ['C000174', '179', 'Democrat']]"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "legislators_ID = []\n",
     "legislators_ID.extend(legis_current)\n",
-    "legislators_ID.extend(legis_historical[1:])"
+    "legislators_ID.extend(legis_historical)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,13 +172,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
     "\n",
-    "with open('data/112_filtered.csv', 'w') as csvfile:\n",
+    "with open('data/112.csv', 'w') as csvfile:\n",
     "    filewriter = csv.writer(csvfile, delimiter='|')\n",
     "    filewriter.writerow(['bill_id', 'title', 'subject','summary', 'party'])\n",
     "    for bill in lo_bills:\n",
